# cifar_classify

./: .gitignore  LICENCE  README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp  test.cpp  utils.cpp
lightning_logs/cifar10/version_21/: events.out.tfevents.1756750813.MSI.12472.0  hparams.yaml
models/: model.onnx
python/: export.py  pyproject.toml  train.py
